dark mode fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -229,13 +229,14 @@ body {
             display: block;
             height: 100%;
             margin-top:20px;
+            color:inherit;
         }
         
         .left-section {
             float:left;
             width:20%;
             text-align:center;
-            color:black;
+
             display:block; 
             margin-top:7px;
             height:100%;
